Thu Aug 11 13:34:51 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/Writer_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataWriter_T.cpp:
        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp:
        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.cpp:
        * connectors/dds4ccm/impl/ndds/Publisher.cpp:
        * connectors/dds4ccm/impl/ndds/Subscriber.cpp:
          Initialize all NDDS QoS variables with their default value, than
          we get correct values for all non standard extensions.

Thu Aug 11 11:04:12 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/ndds/ndds_dcps.idl:
        * connectors/dds4ccm/impl/ndds/convertors/DataReaderQos.h:
        * connectors/dds4ccm/impl/ndds/convertors/DataReaderResourceLimitsQosPolicy.h:
        * connectors/dds4ccm/impl/ndds/convertors/DataWriterQos.h:
        * connectors/dds4ccm/impl/ndds/convertors/DataWriterResourceLimitsQosPolicy.h:
        * connectors/dds4ccm/impl/ndds/convertors/DestinationOrderQosPolicy.h:
        * connectors/dds4ccm/impl/ndds/convertors/HistoryQosPolicy.h:
          Extended IDL QoS representation with several NDDS specific fields

Thu Aug 11 07:01:53 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/dds4ccm_conf.h:
          Fixed typo in error message

Thu Aug 11 06:54:09 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReader_T.h:
        * connectors/dds4ccm/impl/ndds/DataReader_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataWriter_T.cpp:
        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp:
        * connectors/dds4ccm/impl/ndds/Publisher.cpp:
        * connectors/dds4ccm/impl/ndds/Subscriber.cpp:
        * connectors/dds4ccm/impl/ndds/Topic.cpp:
          Fixed possible race condition in the set_listener methods

Wed Aug 10 12:43:08 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
